--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "",
   "scripts": {
     "build": "webpack --config webpack.config.js",
+    "build:legacy": "env NODE_OPTIONS='--openssl-legacy-provider' webpack",
     "start": "webpack-dev-server --open",
     "watch": "webpack --config webpack.config.js --watch --progress",
     "format": "prettier --ignore-path .gitignore --write '**/*.js'"
@@ -49,3 +50,4 @@
     "d3-selection": "1.3.0"
   }
 }
+
