--- a/package.json
+++ b/package.json
@@ -39,14 +39,16 @@
     "ssf": "^0.10.2",
     "styled-components": "6.1.8",
     "to-string-loader": "^1.1.5",
-    "uglifyjs-webpack-plugin": "^1.2.5",
     "url-loader": "^4.1.0",
+    "terser-webpack-plugin": "^5.3.10",
     "webpack": "^5.94.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.7.1"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "5.0.4"
   },
   "resolutions": {
     "js-yaml": "3.13.1",
-    "d3-selection": "1.3.0"
+    "d3-selection": "1.3.0",
+    "loader-utils": "2.0.4",
+    "json-schema": "0.4.0"
   }
 }
